--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,8 +19,9 @@
     "mui": "^0.0.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.7.0",
-    "react-router-dom": "^7.7.0"
+    "react-router": "^7.7.1",
+    "react-router-dom": "^7.7.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
